--- a/configs/training/finetune.yaml
+++ b/configs/training/finetune.yaml
@@ -1,13 +1,13 @@
-training:
-  output_dir: "${hydra:runtime.cwd}/outputs"
-  num_epochs: 3
-  per_device_train_batch_size: 8
-  per_device_eval_batch_size: 8
-  learning_rate: 5e-5
-  weight_decay: 0.01
-  save_steps: 500
-  evaluation_strategy: "steps"
-  eval_steps: 200
-  seed: 42
-  logging_dir: "${hydra:runtime.cwd}/logs"
-  logging_steps: 10
+output_dir: "outputs"
+num_epochs: 3
+per_device_train_batch_size: 8
+per_device_eval_batch_size: 8
+learning_rate: 5e-5
+weight_decay: 0.01
+save_steps: 500
+eval_strategy: "steps"
+eval_steps: 200
+seed: 42
+logging_dir: "logs"
+logging_steps: 10
+dataloader_pin_memory: false
